--- a/projects/jumystap/index.html
+++ b/projects/jumystap/index.html
@@ -23,8 +23,8 @@
           <p class="header-logo-text">Jumystap</p>
         </div>
 
-        <div class="menu">
-          <button class="btnn ">Home</button>
+        <div class="header-menu">
+          <button class="btnn">Home</button>
           <button class="btnn">About us</button>
           <button class="btnn">How it works</button>
           <button class="btnn">Get Started</button>
@@ -33,9 +33,9 @@
 
       <div class="description-page">
         <div class="desc-info">
-          <div class="text">
-            <p>Get hired for your skills, not experience</p>
-            <p>
+          <div class="ditext">
+            <p class="ditext-title">Get hired for your skills, not experience</p>
+            <p class="ditext-description">
               The best tool to start youe career journey with. Get connected with the best companies
               - just share your CV to get started.
             </p>
@@ -51,6 +51,92 @@
             alt="image4"
             src="https://s3-alpha-sig.figma.com/img/2a76/8e5c/51c4c53cbc5f7fdbba7bd554a470a4c9?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=U18A-vXHjqYohjWpqdqHI1raxbGb1espQtwCi~Eu5ojTSRgDQw22~vNirpKKjSJ6VTLvSM7-2BH4By4hXhL~FGDWcU8p3XBmos37QTIProYl~49nytVdswtYaYgsWZrJTzB7O4j2zP44jfpIRNrxX7PX8I8mGNi585oUgObUNcyL~N5SS24wRqKkl9wd5TOmY0ntyURxsRegMzbkNIPxtMFvje0E6DaGxjPS0eXBR6sw3ze-7yhonY9xbn5Igp99Z2hWK0jpMz9Uq2IWx3h6~zx7UdvpHvHfzT9zZw80z00kYCUtAxvOUPCwQr5Z-XxvCbtQuSjSVIEqpQJLPbZqLw__"
           />
+        </div>
+      </div>
+    </div>
+
+    <!-- _______________________________ -->
+
+    <div class="hitworks-page">
+      <div class="hitworks-page-info">
+        <div class="hitwtext">
+          <p class="hitwt-description">Here should be description text</p>
+          <p class="hitwt-title">How It Works?</p>
+        </div>
+      </div>
+
+      <div class="frame">
+        <div class="info">
+          <div>
+            <img
+              class="info-img"
+              alt="info1"
+              id="info1"
+              src="https://s3-alpha-sig.figma.com/img/1186/4009/e614868ff3980523c37f871a9de2592d?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PMDIHKSbkIzCs1y1i4U4B7iRRNvmIJK9tapjEXcOOyTQcD2CfsP6QaRW3fBcaCfLFgeR9pWHnTI2Mxnp7571wz9Djc~ce03Yrt57Nh6P312SVIvziY1uqQVjo~6-0I1B2WIA80~AUWNdW4hT-Xcnw6VZooLG3yTsN9a4veWcOmYGX~OCuVyHhYc3Del2KEpwDSIb~r3jSZTLbvIYeyt0210qaua6u-bEU0n6UOVXv6-ouPpJjoYTpTDhfj4UsHuLHdyjS-t8FDTp-DDj7TzFR3pudewQ13vRLYYSdmUGoBSrKceUPeweKPVw1LXBc95zwUIVguetHWnA0jV4osliAQ__"
+            />
+          </div>
+          <div class="frame-text">
+            <p class="frame-text-title">Show your best skills</p>
+            <p class="frame-text-desc">Upload your CV</p>
+          </div>
+        </div>
+
+        <div class="info">
+          <div>
+            <img
+              class="info-img"
+              alt="info2"
+              id="info2"
+              src="https://s3-alpha-sig.figma.com/img/58a6/2f8f/3d144b51f8a076c7f13050af6c757666?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PDFjaHL8iHaeKS6OcROh~3sDNjW9Jeyp1jftdKTBWqLpQyWUt3Zu-rk8TfIIRN4PnY~ADrlG4U-a2TijJPvQc34no~ZOvG9FJ7GtdPAJqud4vaxmfb4O2AMMXqBwqddZh6uSmTrgurnR9sKoq0mldcn52EQdt-SVauz9vXhGDclyPiwvlxkXaHZBp6T2zU6VtmfjTOLhB9Bhd7UYiWFcUEZVK6FnJAb5~XshBxhaJ3oPwgPpjCQs5jeuvowShtSP-6GYc3s0HxFQomyZxtKYE0nQyF5daj7J-006p85Y1xMcxO0W~hun5ekDfIPL0KUvrx3b5P3xV0mkYV-xdsMtLA__"
+            />
+          </div>
+          <div class="frame-text">
+            <p class="frame-text-title">Search for the best match</p>
+            <p class="frame-text-desc">Lorem Ipsum Description Text</p>
+          </div>
+        </div>
+
+        <div class="info">
+          <div>
+            <img
+              class="info-img"
+              alt="info3"
+              id="info3"
+              src="https://s3-alpha-sig.figma.com/img/ac1a/f31e/20c94b04d1d3a51957e17a256d6109a2?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=gGp4ylXSOHqEbs8ZCsa47b56eHRCz1FbPVrManBdR7Qousc2r6Wegn7cguqplHypVbpxtAgQWjDFUkL2kwtezhS2WXRXW4-e8vBQiADl66QW4Ud8h~TuHoAuHljUe~1ohZL0DMg~hQpcBLmwRoIY61J6bqcWy9RMSGIbY0OA8QuF0sxZqCNY-pmRamOuDL2M0aJLZatZXtnWG2E09rwU-5RyrlY13SBvbCBMpEas7V5NA6EiKri0MgSk5Ii-p0qp0hpfyCZaNXN8DhpcnSBDexOvouMadMQV7J3vn3rOzYWyAeTdhOD87WQaTuQ1~1PQS88xW8oy1IQ6npARw5q5Ow__"
+            />
+          </div>
+          <div class="frame-text">
+            <p class="frame-text-title">Find the best opportunity</p>
+            <p class="frame-text-desc">Lorem Ipsum Description Text</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- _______________________________ -->
+    <div class="input-field-block">
+      <div class="ifb-info">
+        <p class="ifbi-title">Lets Get Started</p>
+        <p class="ifbi-description">
+          The best tool to start your career journey with. Get connected with the best companies —
+          just share your CV to get started.
+        </p>
+
+        <!-- <div class="ifb-frame">
+          <input />
+          <button>Find Job</button>
+        </div> -->
+
+        <div class="container-f">
+          <form class="d-flex form" role="search">
+            <input
+              class="form-control"
+              type="search"
+              placeholder="Search for job by keywords"
+              aria-label="Search"
+            />
+            <button class="hitworks-btn m-3 mt-0" type="submit">Find Job</button>
+          </form>
         </div>
       </div>
     </div>
