--- a/projects/MediaAsMeduim/index.html
+++ b/projects/MediaAsMeduim/index.html
@@ -19,10 +19,27 @@
     </div>
     <div class="header-second">
       <p class="header-second-logo kanit">New York Times</p>
+      <img
+        onclick="hideDetailsPage()"
+        alt="back"
+        id="back"
+        src="https://s3-alpha-sig.figma.com/img/edf0/1341/316e5c75ea1950433bc00f90d98a4464?Expires=1739145600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=jzRhvwZds-aBDOe2KhIw5A2OVc9bVZN2lMdL~vrzqjcSpGqvejqkGqSuuHuQh270haEW8cq96jgiXhPPNk6jIUeFgjRS-N2xeOvSuThmu72alAYkvonciU0Xl37AaOH4GycFjBXP5d3uDuoomaR-O4uDxlckumntVm3MDRABD-3y0wLTjMRZfzkFEuhF2PS-OXdNstXCIiKKObNd0Uy3oHydpWXaYSYKv~1OG2RoAtKuJXeo4RBHv2aRoJjkjFZ4wEvT14INDy38lwDY~rvjjrTEFB-Dh2yoBb0Nm8Br4BEkmI6Ce7sbh12CCxRv~7ClDcRf-CBn8xnRm-r-oynxqg__"
+      />
     </div>
-    <div class="newlist" id="newlist"></div>
 
-    <div class="footer"></div>
+    <div class="newlist" id="newlist"></div>
+    <div id="details"></div>
+
+    <footer>
+      <div class="menu-footer inter">
+        Credits: photos from <a href="https://unsplash.com/@surface">Unsplash.com</a>, icons from
+        <a href="https://icons8.com/">Icons8</a>, graphics from
+        <a href="https://craftwork.design/">craftwork.design</a>.
+      </div>
+      <div class="madeby">
+        Made with <a href="https://github.com/bulbulkae">bulbulkae</a> ✨❤️ in 2025
+      </div>
+    </footer>
 
     <script defer src="./index.js"></script>
   </body>
